# human-reconstruction

./: .gitignore  CMakeLists.txt  README.md
data/: Q_determinant  circumferences  coefficient  convexhull.txt  cp.npy  facets.npy  male_d_coeff.npy  male_d_inv_mean.npy  male_dets.npy  male_mean_deform.npy  male_mean_measure.npy  male_measure.npy  male_std_deform.npy  male_std_measure.npy  male_t_measure.npy  mean_deform  mean_measure  measure_list  points.txt  points_id.txt  rfe_mask.npy  std_deform  std_measure  time.xlsx  v_inverse
data/Hausdorff/: measure.xlsx
data/measure_real/: measure_real.xlsx
data/measure_vtk/: 0-0-neck.vtk  0-1-neck.vtk  0-2-neck.vtk  0-3-neck.vtk  0_croth_knee_floor.vtk  1-0-chest.vtk  1-1-chest.vtk  1-2-chest.vtk  1-3-chest.vtk  10-0-neck_shoulder_elbow_wirst.vtk  10-1-neck_shoulder_elbow_wirst.vtk  10-2-neck_shoulder_elbow_wirst.vtk  10-3-neck_shoulder_elbow_wirst.vtk  11-0-natural_waist_rise.vtk  11-1-natural_waist_rise.vtk  11-2-natural_waist_rise.vtk  11-3-natural_waist_rise.vtk  1_across_back_shoulder_neck.vtk  2-0-belly_button_waist.vtk  2-1-belly_button_waist.vtk  2-2-belly_button_waist.vtk  2-3-belly_button_waist.vtk  2_neck_to_gluteal_hip.vtk  3-0-gluteal_hip.vtk  3-1-gluteal_hip.vtk  3-2-gluteal_hip.vtk  3-3-gluteal_hip.vtk  3_shoulder_to_midhand.vtk  4-0-natural_waist.vtk  4-1-natural_waist.vtk  4-2-natural_waist.vtk  4-3-natural_waist.vtk  4_outer_natural_waist_to_floor.vtk  5-0-maximum_hip.vtk  5-1-maximum_hip.vtk  5-2-maximum_hip.vtk  5-3-maximum_hip.vtk  6-0-mid_upper_arm.vtk  6-1-mid_upper_arm.vtk  6-2-mid_upper_arm.vtk  (+14 more)
data/path/: across_back_shoulder_neck0  belly_button_waist0  belly_button_waist1  belly_button_waist2  belly_button_waist3  chest0  chest1  chest2  chest3  croth_knee_floor0  gluteal_hip0  gluteal_hip1  gluteal_hip2  gluteal_hip3  knee0  knee1  knee2  knee3  maximum_hip0  maximum_hip1  maximum_hip2  maximum_hip3  maximum_thigh0  maximum_thigh1  maximum_thigh2  maximum_thigh3  mid_upper_arm0  mid_upper_arm1  mid_upper_arm2  mid_upper_arm3  natural_waist0  natural_waist1  natural_waist2  natural_waist3  natural_waist_rise0  natural_waist_rise1  natural_waist_rise2  natural_waist_rise3  neck0  neck1  (+13 more)
doc/: Estimating 3D Human Shapes from Measurements.md  reconstruction.docx  reconstruction.html  reconstruction.md  ~$construction.docx
src/: CMakeLists.txt  Laplacian1.cpp  Laplacian1.h  binary_io.h  error_analysis.cpp  estimate_shape.cpp  estimate_shape.h  fit_measure.cpp  fit_measure.h  fit_measurements.cpp  fit_measurements.h  main.cpp  main01.cpp  measure.cpp  measure.h  measure_t.cpp  measure_t.h  mesh_io.cpp  mesh_io.h  reshaper.cpp  reshaper.h  solver.cpp  solver.h  testalglib.cpp  testpmp.cpp  utils.cpp  utils.h
src/python_script/: measure_predict.py
src/python_script/GUI/src/: QtUI.py  img.qrc  img_rc.py  maya_widget.py  reshaper.py  ui.py  ui.ui  utils.py
